data/derived/comb/progs/unify/prog7588.ml.out
Characters 92-94:
  | Sine(e1)  -> buildSine(eval e1)
                                ^^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'a
